--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
                     <h3 class="card-title"><em>Tarjeta grafica msi Geforce GTX 1070</em></h3>
                 </div>
                 <img class="card-img"
-                    src="https://asset.msi.com/resize/image/global/product/product_0_20180417114910_5ad56eb6add6d.png62405b38c58fe0f07fcef2367d8a9ba1/600.png">
+                    src="/assets/images/producto1/1.png">>
                 <div class="card-body">
                     <p class="card-p">
                         La MSI GeForce GTX 1070 combina un rendimiento excepcional y eficiencia energética. Con 8 GB de memoria GDDR5 y arquitectura Pascal, proporciona una experiencia de juego fluida y visualmente impresionante, perfecta para gamers que buscan calidad gráfica sin compromisos.
@@ -42,7 +42,7 @@
                     <h3 class="card-title"><em>Tarjeta grafica GIGABYTE Geforce RTX 4080</em></h3>
                 </div>
                 <img class="card-img"
-                    src="https://media.lifeinformatica.com/cdn-cgi/image/sharpen=0.5,f=auto/contents/Life/GIGABYTE-GVN408SWV2-00-10/imgs/GVN408SWV2-00-10-01.png">
+                    src="/assets/images/producto2/1.avif">
                 <div class="card-body">
                     <p class="card-p">
                         La GIGABYTE GeForce RTX 4080 es una tarjeta gráfica de última generación con 16 GB de memoria GDDR6X. Diseñada para gamers y creadores, ofrece rendimiento superior, trazado de rayos en tiempo real y una eficiencia energética notable, ideal para cualquier proyecto.
